[package]
name = "protagonist"
version = "0.0.1"
edition = "2018"
authors = ["Dy11on <26803229+Dy11on@users.noreply.github.com>"]
license = "Apache-2.0"
description = "WIP game engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
